tests/baselines/reference/classImplementsClass2.errors.txt
tests/cases/compiler/classImplementsClass2.ts(2,7): error TS2720: Class 'C' incorrectly implements class 'A'. Did you mean to extend 'A' and inherit its members as a subclass?
  Index signature is missing in type 'A'.
tests/cases/compiler/classImplementsClass2.ts(13,1): error TS2322: Type 'C' is not assignable to type 'C2'.
  Index signature is missing in type 'C2'.


==== tests/cases/compiler/classImplementsClass2.ts (2 errors) ====
    class A { foo(): number { return 1; } }
    class C implements A {} // error
          ~
!!! error TS2720: Class 'C' incorrectly implements class 'A'. Did you mean to extend 'A' and inherit its members as a subclass?
!!! error TS2720:   Index signature is missing in type 'A'.
    
    class C2 extends A {
        foo() {
            return 1;
        }
    }
    
    var c: C;
    var c2: C2;
    c = c2;
    c2 = c;
    ~~
!!! error TS2322: Type 'C' is not assignable to type 'C2'.
!!! error TS2322:   Index signature is missing in type 'C2'.